--- a/css/css.css
+++ b/css/css.css
@@ -17,6 +17,14 @@ p{
 }
 .three{background: goldenrod;animation: three 10s infinite;}
 .four{background: black;color: #ffffff;animation: four 10s infinite;}
+.w{font-size: 36px;display: block;animation: w 10s infinite;}
+@keyframes w {
+    0%{opacity: 0;}
+    70%{opacity: 0;}
+    80%{opacity: 1;}
+    90%{opacity: 0;}
+    100%{opacity: 0;}
+}
 @keyframes one {
     0%{opacity: 0;}
     20%{opacity: 1;}
